28 April 2004 Radu Ursu
- moved examples from doc_tex to examples dir
- moved headers from include/CGAL/Visibility_complex to include/CGAL 

22 April 2004 Radu Ursu
- moved test_suite directory to test directory

22 April 2004 Radu Ursu
- changed files according to statement change from CEP to CGAL package

Before 22 April 2004

- CGAL:: missing in shortest_path.C in testsuite and demo
- std::missing for copy and back_inserter
- leftturn is deprecated and replaced by left_turn  (g++ warns about that)
  Shouldn't that be function objects anyway?
- the same for rightturn
- made a Point_2    const Point_2&