@@ -5,9 +5,8 @@
 #include <list>
 
 #include <CGAL/Simple_cartesian.h>
-
-#include <CEP/Visibility_complex/Shortest_path_segment_traits.h>
-#include <CEP/Visibility_complex/shortest_path_2.h>
+#include <CGAL/Shortest_path_segment_traits.h>
+#include <CGAL/shortest_path_2.h>
 //
 // Number type used for input
 typedef int                                         NT;  
