@@ -5,9 +5,8 @@
 #include <list>
 
 #include <CGAL/Simple_cartesian.h>
-
-#include <CEP/Visibility_complex/Visibility_complex_polygon_traits.h>
-#include <CEP/Visibility_complex/Visibility_complex_2.h>
+#include <CGAL/Visibility_complex_polygon_traits.h>
+#include <CGAL/Visibility_complex_2.h>
 
 typedef int                                         FT;
 typedef CGAL::Simple_cartesian <FT>                  Rep;
